1. When sorting by accession, a map of proteinID and accession is made and put into the session for future use. 2. Fixed problem with annotation dialog text not displaying left-aligned.

--- a/YRC_COLLAB/branches/protinfer_for_perc/WebRoot/css/proteinfer.css
+++ b/YRC_COLLAB/branches/protinfer_for_perc/WebRoot/css/proteinfer.css
@@ -5,13 +5,13 @@ DIV.pinfer_header {
 
 TH.sorted-asc {
 	background-image:url(../images/proteinfer/asc.gif);
-	background-position:right center;
+	background-position:bottom center;
 	background-repeat:no-repeat;
 }
 
 TH.sorted-desc {
 	background-image:url(../images/proteinfer/desc.gif);
-	background-position:right center;
+	background-position:bottom center;
 	background-repeat:no-repeat;
 }
 
